# WiggleMe-AI

./: .gitignore  Cargo.toml  README.md  build.bat  build_log.txt  build_log3.txt  build_log5.txt  build_log6.txt  build_log_utf8.txt  build_manual_log.txt
include/: ai_movement.h
src/: ai_movement.cpp  main.cpp  main.rs
