[package]
name = "wiggleme_ai"
version = "1.0.0"
edition = "2021"
description = "AI-Powered Human-Kinematic Mouse Simulator"
license = "MIT"

[[bin]]
name = "WiggleMeAI"
path = "src/main.rs"

[dependencies]
rand = "0.8"
noise = "0.9"
chrono = "0.4"
sysinfo = "0.32"

[dependencies.windows]
version = "0.57"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
]

[profile.release]
opt-level = 3
lto = true
strip = true
